# Neobis_Auth_Project

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
Lorby/: manage.py
Lorby/Auth/: models.py  renderers.py  serializers.py  urls.py  utils.py  views.py
Lorby/Auth/migrations/: 0001_initial.py
Lorby/Lorby/: asgi.py  settings.py  urls.py  wsgi.py
