[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Kondratsiuk Marina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
drf-yasg = "^1.21.7"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
